// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button applies theme and style props 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
      Object {
        "backgroundColor": "blue",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
          "fontSize": 16,
          "fontWeight": "700",
          "textAlign": "center",
        },
        Object {
          "color": "red",
        },
      ]
    }
  >
    A pressable button
  </Text>
</View>
`;

exports[`Button renders as expected with a component passed as children 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text>
    A pressable button
  </Text>
</View>
`;

exports[`Button renders as expected with a string passed as children 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
          "fontSize": 16,
          "fontWeight": "700",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    A pressable button
  </Text>
</View>
`;
